--- a/frontend/src/app/components/page-not-found/page-not-found.component.html
+++ b/frontend/src/app/components/page-not-found/page-not-found.component.html
@@ -1,3 +1,8 @@
 <div class="text-center pt-4">
-    <img class="image-responsive" src="../../../assets/images/page-not-found.png" width="700" alt="page-not-found"/>
+  <img
+    class="image-responsive"
+    src="../../../assets/images/page-not-found.png"
+    width="700"
+    alt="page-not-found"
+  />
 </div>
