--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -33,9 +33,8 @@
       li {
         display: inline-block;
         position: relative;
-        margin-right: 20px;
+        margin: 0 20px 0 0;
         list-style: none;
-        margin-top: 0;
 
         a {
           font-size: 16px;
@@ -106,139 +105,6 @@
     font-weight: 600;
     letter-spacing: 1px;
     display: contents;
-  }
-}
-
-.mobile-view {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: auto;
-  display: block;
-  overflow: hidden;
-  width: 400px;
-  height: 100vh;
-  padding: 20px 10px 20px 30px;
-  transition: all 0.5s ease 0s;
-  transform: translateX(100%);
-  background-color: var(--white);
-  box-shadow: none;
-  z-index: 99999;
-}
-
-.mobile-menu {
-  padding: 50px 20px;
-  right: auto;
-  left: 0;
-
-  .mobile-menu-open {
-    transform: translateX(0);
-  }
-
-  .mobile-menu-close {
-    background-color: transparent;
-    font-size: 30px;
-    padding: 0 15px;
-    border: none;
-  }
-
-  .menu-inner {
-    position: relative;
-    z-index: 9;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    touch-action: auto;
-    overflow-x: hidden !important;
-    padding-right: 20px;
-
-    .menu-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 25px;
-      padding-bottom: 15px;
-      border-bottom: 1px solid #eee;
-    }
-
-    .search-form {
-      margin-bottom: 30px;
-      position: relative;
-      input {
-        margin-bottom: 0;
-      }
-      button {
-        background-color: transparent;
-        position: absolute;
-        right: 0;
-        top: 50%;
-        transform: translateY(-50%);
-        height: 100%;
-        padding: 0 15px;
-        border: none;
-      }
-    }
-
-    .menu-list {
-      ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        li {
-          position: relative;
-          a {
-            color: var(--custom__heading-color);
-            display: block;
-            padding: 8px 24px 8px 0;
-            text-transform: uppercase;
-          }
-        }
-      }
-    }
-
-    .menu-buttons {
-      border-top: 1px solid var(--border-color-1);
-      padding: 5px 0px 20px;
-      margin: 30px 0;
-      border-bottom: 1px solid var(--border-color-1);
-      ul > li {
-        display: block;
-        margin-top: 1rem;
-        .btn-icon {
-          width: 50px;
-          display: inline-block;
-          height: 50px;
-          border: 2px solid var(--border-color-1);
-          line-height: 46px;
-          text-align: center;
-          margin-right: 10px;
-        }
-      }
-    }
-
-    .social-media-menu {
-      ul > li {
-        list-style: none;
-        display: inline-block;
-        margin-right: 10px;
-        a {
-          background-color: var(--section-bg-1);
-          color: var(--custom__paragraph-color);
-          display: block;
-          width: 40px;
-          height: 40px;
-          line-height: 40px;
-          text-align: center;
-        }
-      }
-    }
-  }
-
-  .scrollbar {
-    overflow-y: auto;
   }
 }
 
