--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,20 +1,42 @@
 <div id="carousel" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../../../assets/images/slider/slider-1.jpg" class="d-block w-100" alt="carousel-img">
+      <img
+        src="../../../assets/images/slider/slider-1.jpg"
+        class="d-block w-100"
+        alt="carousel-img"
+      />
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/images/slider/slider-2.jpg" class="d-block w-100" alt="carousel-img">
+      <img
+        src="../../../assets/images/slider/slider-2.jpg"
+        class="d-block w-100"
+        alt="carousel-img"
+      />
     </div>
     <div class="carousel-item">
-      <img src="../../../assets/images/slider/slider-3.jpg" class="d-block w-100" alt="carousel-img">
+      <img
+        src="../../../assets/images/slider/slider-3.jpg"
+        class="d-block w-100"
+        alt="carousel-img"
+      />
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+  <button
+    class="carousel-control-prev"
+    type="button"
+    data-bs-target="#carousel"
+    data-bs-slide="prev"
+  >
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+  <button
+    class="carousel-control-next"
+    type="button"
+    data-bs-target="#carousel"
+    data-bs-slide="next"
+  >
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
@@ -25,7 +47,11 @@
     <div class="col-sm-12 col-md-6 my-2">
       <div class="banner-img">
         <a routerLink="/products">
-          <img src="../../../assets/images/ads/1.png" class="img-responsive w-100" alt="ads" />
+          <img
+            src="../../../assets/images/ads/1.png"
+            class="img-responsive w-100"
+            alt="ads"
+          />
         </a>
       </div>
     </div>
@@ -34,14 +60,22 @@
         <div class="col-12 my-2">
           <div class="banner-img">
             <a routerLink="/products">
-              <img src="../../../assets/images/ads/2.png" class="img-responsive w-100" alt="ads" />
+              <img
+                src="../../../assets/images/ads/2.png"
+                class="img-responsive w-100"
+                alt="ads"
+              />
             </a>
           </div>
         </div>
         <div class="col-12 mt-4 mb-2">
           <div class="banner-img">
             <a routerLink="/products">
-              <img src="../../../assets/images/ads/3.png" class="img-responsive w-100" alt="ads" />
+              <img
+                src="../../../assets/images/ads/3.png"
+                class="img-responsive w-100"
+                alt="ads"
+              />
             </a>
           </div>
         </div>
