--- a/frontend/src/app/components/product/product-list/product-list.component.html
+++ b/frontend/src/app/components/product/product-list/product-list.component.html
@@ -1,49 +1,51 @@
 <div class="product-list-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-8">
-				<div class="filter-options"></div>
-				<div class="product-list-view">
-					<div class="row">
-						<div class="col-xl-4 col-sm-6 col-6" *ngFor="let product of productList">
-							<app-product-item [product]="product" (addToCart)="addProductToCart($event)"></app-product-item>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4">
-				<aside class="product-filters d-block">
-					<div class="filter category-filter">
-						<h4 class="filter-title">
-							<i class="bi bi-tags-fill"></i>Product categories
-						</h4>
-						<ul class="p-0 m-0">
-							<li class="mt-3 category" *ngFor="let category of categoryList">
-								<span [ngClass]="{'active': category == filterCategory}" (click)="filterProducts(category)">{{ category |  titlecase }}</span>
-							</li>
-						</ul>
-					</div>
-					<div class="filter price-filter">
-						<h4 class="filter-title">
-							<i class="bi bi-funnel-fill"></i>Filter by price
-						</h4>
-						<div class="price-range">
-							Your range:
-							<span class="range">{{ 10 | currency : "INR" : "symbol" : "2.0" }} -
-								{{
-								filterPriceValue | currency : "INR" : "symbol" : "2.0"
-								}}</span>
-						</div>
-						<mat-slider class="price-value" [max]="500" [min]="10" [step]="50" [discrete]="true">
-							<input matSliderThumb [(ngModel)]="filterPriceValue" (ngModelChange)="filterByPrice()"/>
-						</mat-slider>
-					</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <div class="filter-options"></div>
+        <div class="product-list-view">
+          <div class="row">
+            <div class="col-xl-4 col-sm-6 col-6" *ngFor="let product of productList">
+              <app-product-item [product]="product" (addToCart)="addProductToCart($event)"></app-product-item>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <aside class="product-filters d-block">
+          <div class="filter category-filter">
+            <h4 class="filter-title">
+              <i class="bi bi-tags-fill"></i>Product categories
+            </h4>
+            <ul class="p-0 m-0">
+              <li class="mt-3 category" *ngFor="let category of categoryList">
+                <span [ngClass]="{'active': category == filterCategory}" (click)="filterProducts(category)">
+                  {{ category | titlecase }}
+                </span>
+              </li>
+            </ul>
+          </div>
+          <div class="filter price-filter">
+            <h4 class="filter-title">
+              <i class="bi bi-funnel-fill"></i>Filter by price
+            </h4>
+            <div class="price-range">
+              Your range:
+              <span class="range">{{ 10 | currency : "INR" : "symbol" : "2.0" }} -
+                {{
+                filterPriceValue | currency : "INR" : "symbol" : "2.0"
+                }}</span>
+            </div>
+            <mat-slider class="price-value" [max]="500" [min]="10" [step]="50" [discrete]="true">
+              <input matSliderThumb [(ngModel)]="filterPriceValue" (ngModelChange)="filterByPrice()" />
+            </mat-slider>
+          </div>
 
-					<div class="image-ads">
-						<img class="w-100 img-responsive" src="../../../../assets/images/ads/product-ad.png" alt="ad">
-					</div>
-				</aside>
-			</div>
-		</div>
-	</div>
+          <div class="image-ads">
+            <img class="w-100 img-responsive" src="../../../../assets/images/ads/product-ad.png" alt="ad">
+          </div>
+        </aside>
+      </div>
+    </div>
+  </div>
 </div>
