--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
-@import 'ngx-toastr/toastr-bs5-alert';
+@import "ngx-toastr/toastr-bs5-alert";
 
 @font-face {
   font-family: "Titillium Web";
@@ -15,13 +15,8 @@
 
 :root {
   --custom__primary-color: #071c1f;
-  --custom__primary-color-2: #041113;
-  /* Darken */
-  --custom__primary-color-3: #133236;
   /* Lighten */
   --custom__secondary-color: #80b500;
-  /* --custom__secondary-color: #e53e29; */
-  --custom__secondary-color-2: #699403;
   /* Darken */
   --custom__secondary-color-3: #a2da1c;
   /* Lighten */
@@ -31,64 +26,21 @@
   --custom__heading-font: "Titillium Web", sans-serif;
   --custom__body-font: "PT Sans Narrow", sans-serif;
 
-  /* Footer ACD2D8 8CB2B2  */
-  --custom__color-1: #8cb2b2;
-  --custom__color-2: #acd2d8;
-  --custom__color-3: #a3bcc0;
-  --custom__color-4: #84a2a6;
-
   /* Background Colors */
   --section-bg-1: #f7f5eb;
-  /* White */
-  /* --section-bg-1: #F2F6F7; /* White */
   --section-bg-2: #071c1f;
-  /* Black */
-
-  --section-bg-5: #272829;
-  /* Black */
-  --section-bg-6: #fdfdfd;
-  /* White */
 
   /* Border Colors */
   --border-color-1: #e5eaee;
-  /* White */
-  --border-color-2: #1e2021;
-  /* Black */
-  --border-color-3: #576466;
-  /* Black */
-  --border-color-4: #eb6954;
-  /* Red */
-  --border-color-5: #bc3928;
-  /* Red */
-  --border-color-6: #103034;
-  /* Black */
-  --border-color-7: #d1dae0;
-  /* White */
-  --border-color-8: #f6f6f6;
-  /* White */
-  --border-color-9: #e4ecf2;
-  /* White */
-  --border-color-10: #ebeeee;
-  /* White */
-  --border-color-11: #ededed;
-  /* White */
-  --border-color-12: #e1e6ff;
-  /* White */
+  --border-color-2: #f6f6f6;
+  --border-color-3: #ededed;
 
   /* Box Shadow Colors */
   --custom__box-shadow-1: 0 16px 32px 0 rgba(7, 28, 31, 0.1);
-  --custom__box-shadow-2: 0 0 4px rgba(0, 0, 0, 0.1);
   /* like border */
-  --custom__box-shadow-3: 0 1px 6px 0 rgba(54, 56, 61, 0.15);
-  /* like border GGL */
-  --custom__box-shadow-4: 0 5px 20px 0 rgba(23, 44, 82, 0.1);
-  --custom__box-shadow-5: 0 8px 16px 0 rgba(93, 93, 93, 0.1);
-  // --custom__box-shadow-6: 0 8px 16px 0 rgba(229, 62, 41, 0.70);
-  --custom__box-shadow-6: 0 0 25px 2px rgba(93, 93, 93, 0.2);
+  --custom__box-shadow-2: 0 1px 6px 0 rgba(54, 56, 61, 0.15);
 
   /* Common Colors */
-  --black: #000000;
-  --black-2: #22355b;
   --white: #fff;
 }
 
@@ -119,18 +71,9 @@ body {
   height: 100%;
 }
 
-h1,
-h2,
 h3,
 h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
+h6 {
   color: var(--custom__heading-color) !important;
   font-family: var(--custom__heading-font);
   font-weight: 700 !important;
@@ -180,7 +123,7 @@ img {
   border-bottom: 1px solid var(--border-color-1);
 }
 
-.mat-mdc-row:last-child{
+.mat-mdc-row:last-child {
   border-bottom: 1px solid var(--border-color-1) !important;
 }
 
@@ -203,7 +146,11 @@ img {
   border-color: var(--custom__secondary-color) !important;
 }
 
-.mat-mdc-radio-button .mdc-radio .mdc-radio__native-control:enabled+.mdc-radio__background .mdc-radio__inner-circle {
+.mat-mdc-radio-button
+  .mdc-radio
+  .mdc-radio__native-control:enabled
+  + .mdc-radio__background
+  .mdc-radio__inner-circle {
   border-color: var(--custom__secondary-color) !important;
 }
 
@@ -220,18 +167,31 @@ img {
 }
 
 .mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-line-ripple::before,
-.mdc-text-field--filled .mdc-line-ripple::after{
+.mdc-text-field--filled .mdc-line-ripple::after {
   border-bottom-color: var(--custom__secondary-color) !important;
 }
 
-.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(.mdc-text-field--focused):hover .mdc-notched-outline .mdc-notched-outline__leading,
-.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(.mdc-text-field--focused):hover .mdc-notched-outline .mdc-notched-outline__notch,
-.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(.mdc-text-field--focused):hover .mdc-notched-outline .mdc-notched-outline__trailing {
+.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(
+    .mdc-text-field--focused
+  ):hover
+  .mdc-notched-outline
+  .mdc-notched-outline__leading,
+.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(
+    .mdc-text-field--focused
+  ):hover
+  .mdc-notched-outline
+  .mdc-notched-outline__notch,
+.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(
+    .mdc-text-field--focused
+  ):hover
+  .mdc-notched-outline
+  .mdc-notched-outline__trailing {
   border-color: var(--custom__secondary-color) !important;
 }
 
 .mat-mdc-select-arrow,
-.mat-mdc-option.mdc-list-item--selected:not(.mdc-list-item--disabled) .mdc-list-item__primary-text {
+.mat-mdc-option.mdc-list-item--selected:not(.mdc-list-item--disabled)
+  .mdc-list-item__primary-text {
   color: var(--custom__secondary-color) !important;
 }
 
@@ -252,10 +212,6 @@ img {
   height: max-content !important;
 }
 
-// .mdc-text-field--invalid:not(.mdc-text-field--disabled) .mdc-floating-label {
-//   color: var(--mdc-theme-error, #f44336);
-// }
-
 .toast-container .ngx-toastr .toast-message,
 .toast-container .ngx-toastr .toast-title {
   color: var(--white) !important;
@@ -272,7 +228,11 @@ img {
   text-align: center;
   cursor: pointer;
   padding: 15px 40px;
-  background: linear-gradient(to right, white 50%, var(--custom__secondary-color)50%);
+  background: linear-gradient(
+    to right,
+    white 50%,
+    var(--custom__secondary-color) 50%
+  );
   background-size: 200% 100%;
   background-position: right bottom;
   border: 1px solid transparent;
@@ -280,7 +240,7 @@ img {
   color: var(--white);
   border-radius: 0 !important;
 
-  &:disabled{
+  &:disabled {
     opacity: 0.5;
     cursor: not-allowed;
   }
@@ -288,6 +248,6 @@ img {
   &:not(:disabled):hover {
     background-position: left bottom;
     color: var(--custom__heading-color);
-    border: 1px solid var(--custom__heading-color)
+    border: 1px solid var(--custom__heading-color);
   }
 }
